fixes in header

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -171,12 +171,12 @@ header {
 .header-social-icons {
     float: left;
     width: 40%;
-    margin-top: 5px;
     @media only screen and (max-width: 650px) {
         display: none;
     }
     .widget.profile .bk-profile-socialicons {
         float: left;
+        margin: 0.5em 0 0;
         a {
             text-decoration: none;
             text-indent: -9999px;
@@ -265,7 +265,7 @@ header {
     }
    .widget {
         &.blogsearch {
-            padding: 1em 0;
+            padding: 0.8em 0;
             text-align: right;
             .blog-search-form {
                 label{
