--- a/stylesheet.less
+++ b/stylesheet.less
@@ -264,39 +264,65 @@ header {
     @media only screen and (max-width: 650px) {
         display: none;
     }
-   .widget {
+}
+
+.header-search-mobile {
+    display: none;
+     @media only screen and (max-width: 650px) {
+        display: block;
+    }
+    .widget {
         &.blogsearch {
-            padding: 0.8em 0;
-            text-align: right;
             .blog-search-form {
-                label{
-                    display: none;
-                }
+                width: 90%;
+                margin: 5% 5% 0;
                 input {
-                    border-top: 1px solid @color-swatch6;
-                    border-left: 1px solid @color-swatch6;
-                    border-bottom: 1px solid @color-swatch6;
-                    background-color: transparent;
-                    height: 30px;
-                    margin: 0 -5px 0 0;
+                    width: 90%;
+                    height: 40px;
                 }
                 button {
-                    background-image:image('/images/search-icon.png');
-                    background-repeat: no-repeat;
-                    background-position: center;
-                    border: none;
-                    background-color: transparent;
-                    text-indent: -9999px;
-                    width: 25px;
-                    height: 30px;
-                    border-top: 1px solid @color-swatch6;
-                    border-right: 1px solid @color-swatch6;
-                    border-bottom: 1px solid @color-swatch6;
+                    width: 10%;
+                    height: 40px;
                 }
             }
         }
     }
 }
+
+.widget {
+    &.blogsearch {
+        padding: 0.8em 0;
+        text-align: right;
+        .blog-search-form {
+            label{
+                display: none;
+            }
+            input {
+                border-top: 1px solid @color-swatch6;
+                border-left: 1px solid @color-swatch6;
+                border-bottom: 1px solid @color-swatch6;
+                border-right: 0;
+                background-color: transparent;
+                height: 30px;
+                margin: 0 -5px 0 0;
+            }
+            button {
+                background-image:image('/images/search-icon.png');
+                background-repeat: no-repeat;
+                background-position: center;
+                border: none;
+                background-color: transparent;
+                text-indent: -9999px;
+                width: 25px;
+                height: 30px;
+                border-top: 1px solid @color-swatch6;
+                border-right: 1px solid @color-swatch6;
+                border-bottom: 1px solid @color-swatch6;
+            }
+        }
+    }
+}
+
 
 /* ===============================
    EXTENDED NAVIGATION
@@ -598,13 +624,17 @@ hr {
                 text-decoration: underline;
             }
     }
-    .blog-post-more-link {
+    .blog-post-more-link a {
         color: @font-swatch5-color;
+        position: relative;
+        padding-right: 15px;
         &:after {
-            content:"\25C4";
+            content:"\25BA";
             color: @color-swatch3;
             position: absolute;
-            left: 1em;
+            right: 0;
+            font-size: 10px;
+            padding-top: 2px;
         }
     }
     .blog-post-date {
