added background colour to blog-post-item and .main

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -26,7 +26,7 @@ body {
     padding-bottom: 0 !important;
     padding-left: 0;
     margin-bottom: 0;
-    background-color: @color-swatch2;
+    background-color: @color-swatch2 !important;
     clear: both;
     @media @tablet {
         padding-top: 2em;
@@ -561,6 +561,7 @@ hr {
 /* BLOG POST ITEM */
 
 .blog-post-item {
+    background-color: @color-swatch2;
     border-bottom: none;
     padding: 5% 20% 7%;
     @media only screen and (max-width: 950px) {
