added widget content to footer

--- a/default.twig
+++ b/default.twig
@@ -42,6 +42,7 @@
 
 <footer>
     <div class="wrapper clearfix">
+        {{widget('content', 'footercolumn1content', {"content":"Pulvinar Vitae"})|raw}}
         {{widget('profile', 'footercolumn1socialicons', { 'profileType':'socialicons', 'socialicons':'profile'})|raw}}
     </div>
 </footer>
