--- a/blogpost.twig
+++ b/blogpost.twig
@@ -40,10 +40,10 @@
 
 <footer>
     <div class="wrapper clearfix">
+        {{widget('content', 'footercolumn1content', {"content":"Pulvinar Vitae"})|raw}}
         {{widget('profile', 'footercolumn1socialicons', { 'profileType':'socialicons', 'socialicons':'profile'})|raw}}
     </div>
 </footer>
-
 </div>
 
 {% endblock %}
