--- a/stylesheet.less
+++ b/stylesheet.less
@@ -26,7 +26,7 @@ body {
     padding-bottom: 0 !important;
     padding-left: 0;
     margin-bottom: 0;
-    background-color: @color-swatch2 !important;
+    background-color: @color-swatch2;
     clear: both;
     @media @tablet {
         padding-top: 2em;
@@ -625,7 +625,7 @@ hr {
                 text-decoration: underline;
             }
     }
-    .blog-post-more-link a {
+    .blog-post-more-link {
         color: @font-swatch5-color;
         position: relative;
         padding-right: 15px;
