--- a/stylesheet.less
+++ b/stylesheet.less
@@ -16,7 +16,7 @@ body {
     background-color: @color-swatch2;
     .canvas {
         width: 90%;
-        margin: 0 5%;
+        margin: 5% 5%;
     }
 }
 
@@ -701,6 +701,7 @@ hr {
                 content:"\25C4";
                 position: absolute;
                 left: 0;
+                font-size: 12px;
             }
     }
     .blog-post-pagination-pagepaginate-newer {
@@ -709,6 +710,8 @@ hr {
                 content:"\25BA";
                 position: absolute;
                 right: 0;
+                font-size: 12px;
+                padding-top: 2px;
             }
     }
 }
@@ -742,7 +745,7 @@ footer {
                 font-size: @font-swatch5-font-size;
                 font-weight: @font-swatch5-font-weight;
                 line-height: @font-swatch5-line-height;
-                color: @font-swatch5-color;
+                color: @font-swatch6-color;
                 letter-spacing: @font-swatch5-letter-spacing;
             }
         }
