--- a/home.twig
+++ b/home.twig
@@ -3,49 +3,31 @@
 
 {% block content %}
 
+<div class="nav-extended wrapper">
+    {{widget('extendednavigation', 'navigationheader', {})|raw}}
+</div>
+
 <header>
     <div class="wrapper clearfix">
-            <div class="header-social-icons">
-                {{widget('profile', 'headersocialicons', { 'profileType':'socialicons', 'socialicons':'profile'})|raw}}
-            </div> <!-- end header-social-icons -->
-            <div class="logo-back"><div class="logo-back-right"></div></div>
             {{widget('logo', 'logo', {"defaultlogo": asset('images/logo.png')})|raw}}
-
-            <div class="header-search">
-                <div id="page-zones__main-widgets__blogsearch" class="widget blogsearch">
-                <form class="blog-search-form">
-                    <label for="search-term">Search posts</label>
-                    <input id="search-term" name="searchTerm" class="blog-search-input" type="search">
-                    <button class="blog-search-submit-button" type="submit">Search</button>
-                </form>
-                </div>
-            </div><!-- end header-search -->
         
         <div class="companyheader clearfix">   
             <div class="header-companyname">
                 {{widget('companyname', 'companyname', {"business": "profile"})|raw}}
             </div><!-- end header-companyname -->
-            <nav>
-                {{widget('extendednavigation', 'navigationheader', {})|raw}}
-            </nav>
+            <div class="header-search">
+                {{widget('blogsearch', 'blogsearch', {})|raw}}
+            </div><!-- end header-search -->
+            
         </div>  <!--end companyheader-->  
 
     </div><!--end wrapper clearfix-->
 </header>
 
 <div class="main wrapper clearfix">
-
-    <div class="header-search-mobile">
-        <div id="page-zones__main-widgets__blogsearch1" class="widget blogsearch">
-        <form class="blog-search-form">
-            <label for="search-term">Search posts</label>
-            <input id="search-term" name="searchTerm" class="blog-search-input" type="search">
-            <button class="blog-search-submit-button" type="submit">Search</button>
-        </form>
-        </div>
-    </div><!-- end header-search-mobile -->
-
-        {{widget('bloglistposts', 'bloglistposts1', {})|raw}}
+    <div class="canvas">
+    {{zone('main')|raw}}
+    </div>
 </div> 
 
 <footer>
