add text-align: centre for blog posts

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -621,6 +621,7 @@ hr {
     border-bottom: none;
     padding: 5% 20% 7%;
     display: inline-block;
+    text-align: center;
     @media only screen and (max-width: 950px) {
         padding: 5% 15% 7%;
     }
