--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1663,12 +1663,12 @@ footer {
             }
         }
         &.content {
-            .bk-content-text {
+            p {
                 font-family: @font-swatch5-font-family;
                 font-size: @font-swatch5-font-size;
                 font-weight: @font-swatch5-font-weight;
                 line-height: @font-swatch5-line-height;
-                color: @font-swatch6-color;
+                color: @font-swatch5-color;
                 letter-spacing: @font-swatch5-letter-spacing;
             }
         }
