--- a/stylesheet.less
+++ b/stylesheet.less
@@ -36,6 +36,7 @@ body {
     .canvas {
         width: 90%;
         margin: 5% 5%;
+        display: inline-block;
     }
     .widget {
         clear: both;
