--- a/stylesheet.less
+++ b/stylesheet.less
@@ -73,9 +73,13 @@ header {
     .wrapper {
         position: relative;
         .widget.logo {
-            width: 20%;
+            -webkit-border-radius: 200px;
+            -moz-border-radius: 200px;
+            border-radius: 200px;
+            width: 130px;
             z-index: 999;
             margin: 0 auto;
+            background-color: @color-swatch2;
             @media @tablet {
                 width: 100%;
                 background-color: @color-swatch7;
@@ -84,11 +88,6 @@ header {
             .logo {
                 text-align: center;
                 float: none;
-                -webkit-border-radius: 200px;
-                -moz-border-radius: 200px;
-                border-radius: 200px;
-                width: 130px;
-                height: 130px;
                 margin: 0 auto -70px;
                 overflow: hidden;
                 @media @tablet {
