add style for blog search form

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -192,6 +192,9 @@ header {
                 display: none;
             }
             input {
+                -webkit-appearance: none;
+                -webkit-border-radius: 0;
+                -moz-appearance: none;
                 background-color: @color-swatch1;
                 border: none;
                 height: 35px;
