attempt to fix logo

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -84,11 +84,20 @@ header {
             float: none;
             margin: 0 auto -70px;
             overflow: hidden;
-            display: table;
+            display: -webkit-flexbox;
+            display: -ms-flexbox;
+            display: -webkit-flex;
+            display: flex;
+            -webkit-flex-align: center;
+            -ms-flex-align: center;
+            -webkit-align-items: center;
+            align-items: center;
+            text-align: center;
             a {
-                display: table-cell;
-                vertical-align: middle;
+                margin: 0 auto;
                 .logo {
+                    max-width: 130px;
+                    max-height: 130px;
                     @media @tablet {
                         margin: 2em auto 0;
                     }
