--- a/stylesheet.less
+++ b/stylesheet.less
@@ -104,9 +104,7 @@ header {
                 }
             }
             @media @tablet {
-                width: 100%;
-                background-color: @color-swatch7;
-                clear: both;
+                margin: 2em auto 0;
             }
         }
         .companyheader {
