Changes 'bloglistposts' to 'blogpostlist' in twig and less files

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -610,7 +610,7 @@ hr {
    =============================== */
 
 .widget {
-    &.bloglistposts {
+    &.blogpostlist {
         width: 100%;
         margin: 0 auto;
         .blog-post-item {
@@ -705,7 +705,7 @@ hr {
     }
 }/* end blog-post-item */
 
-.bk-pt-default .widget.bloglistposts .blog-post-item {
+.bk-pt-default .widget.blogpostlist .blog-post-item {
     border-bottom: 2px solid @color-swatch1;
 }
 
