--- a/default.twig
+++ b/default.twig
@@ -34,7 +34,7 @@
 <footer>
     <div class="wrapper clearfix">
         {{widget('content', 'footercolumn1content', {"content":"Pulvinar Vitae"})|raw}}
-        {{widget('profile', 'footercolumn1socialicons', { 'profileType':'socialicons', 'socialicons':'profile'})|raw}}
+        {{widget('profile', 'footercolumn1socialicons', { 'profileType' : 'socialicons' })|raw}}
     </div>
 </footer>
 
