add margin top to extended navigation

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -234,13 +234,13 @@ header {
    =============================== */
 
 
-  #page-zones__template-widgets__extendednavigation-navigationheader {
+#page-zones__template-widgets__extendednavigation-navigationheader {
     overflow: visible;
-  }
+}
 
-  .bk-overlay.hover {
+.bk-overlay.hover {
     min-height: 4em;
-  }
+}
 
 
 .nav-extended.wrapper {
@@ -261,7 +261,7 @@ header {
         margin: 0 5%;
         @media only screen and (min-width: 1140px) {
             width: 1024px;
-            margin: 0 auto;
+            margin: 2em auto 0;
         }
         @media @mobile {
             width: 100%;
