--- a/stylesheet.less
+++ b/stylesheet.less
@@ -606,7 +606,7 @@ hr {
 }
 
 /* ===============================
-  WIDGET BLOG LIST POSTS
+   BLOG LIST POSTS
    =============================== */
 
 .widget {
@@ -650,21 +650,6 @@ hr {
             min-height: 200px;
         }
     }/* end blog-post-feature-image-wrap */
-    h2 {
-        margin-top: 0;
-        a {
-            font-family: @font-swatch2-font-family;
-            font-size: @font-swatch2-font-size;
-            font-weight: @font-swatch2-font-weight;
-            line-height: @font-swatch2-line-height;
-            color: @font-swatch2-color;
-            letter-spacing: @font-swatch2-letter-spacing;
-            text-decoration: none;
-            &:hover {
-                text-decoration: underline;
-            }
-        }
-    }
     p {
         font-family: @font-swatch5-font-family;
         font-size: @font-swatch5-font-size;
@@ -704,6 +689,22 @@ hr {
         float: left;
     }
 }/* end blog-post-item */
+
+.blog-post-title { /* style for both H2 and H1 */
+    margin-top: 0;
+    a {
+        font-family: @font-swatch2-font-family;
+        font-size: @font-swatch2-font-size;
+        font-weight: @font-swatch2-font-weight;
+        line-height: @font-swatch2-line-height;
+        color: @font-swatch2-color;
+        letter-spacing: @font-swatch2-letter-spacing;
+        text-decoration: none;
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+}
 
 .bk-pt-default .widget.blogpostlist .blog-post-item {
     border-bottom: 2px solid @color-swatch1;
