change classes for style for blog titles

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -690,7 +690,7 @@ hr {
     }
 }/* end blog-post-item */
 
-.blog-post-title { /* style for both H2 and H1 */
+h1.blog-post-title, h2.blog-post-title { /* style for both H2 and H1 */
     margin-top: 0;
     a {
         font-family: @font-swatch2-font-family;
