change class for blog titles

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -627,6 +627,7 @@ hr {
     padding: 5% 20% 7%;
     display: inline-block;
     text-align: center;
+    width: 100%;
     @media only screen and (max-width: 950px) {
         padding: 5% 15% 7%;
     }
@@ -690,7 +691,7 @@ hr {
     }
 }/* end blog-post-item */
 
-h1.blog-post-title, h2.blog-post-title { /* style for both H2 and H1 */
+h1.blog-post-title, h2.blog-post-title a { /* style for both H2 and H1 */
     margin-top: 0;
     a {
         font-family: @font-swatch2-font-family;
