change blog post title on hover

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -700,9 +700,9 @@ h1.blog-post-title, h2.blog-post-title a { /* style for both H2 and H1 */
     color: @font-swatch2-color;
     letter-spacing: @font-swatch2-letter-spacing;
     text-decoration: none;
-    &:hover {
-        text-decoration: underline;
-    }
+}
+h2.blog-post-title a:hover {
+    text-decoration: underline;
 }
 
 .bk-pt-default .widget.blogpostlist .blog-post-item {
