fix style for blog-post-more-link

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -676,11 +676,13 @@ hr {
         color: @font-swatch5-color;
         position: relative;
         padding-right: 15px;
+        a {
+            padding-right: 5px;
+        }
         &:after {
             content:"\25BA";
             color: @color-swatch3;
             position: absolute;
-            right: 0;
             font-size: 10px;
             padding-top: 2px;
         }
