fix style for .blog-post-more-link

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -668,6 +668,7 @@ hr {
         color: @color-swatch3;
         letter-spacing: @font-swatch5-letter-spacing;
         text-decoration: none;
+        padding-right: 0;
         &:hover {
                 text-decoration: underline;
             }
@@ -675,7 +676,8 @@ hr {
     .blog-post-more-link {
         color: @font-swatch5-color;
         position: relative;
-        padding-right: 15px;
+        padding-right: 0;
+        padding-bottom: 0;
         a {
             padding-right: 5px;
         }
