--- a/home.twig
+++ b/home.twig
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="nav-extended wrapper">
-    {{widget('extendednavigation', 'navigationheader', {})|raw}}
+    {{widget('extendednavigation', 'navigationheader', {"align":"centre"})|raw}}
 </div>
 
 <header>
